--- a/composer.json
+++ b/composer.json
@@ -1,18 +1,19 @@
 {
-    "name": "leroy-merlin-br/laravel-kafka",
+    "name": "leroy-merlin-br/metamorphosis",
     "type": "library",
     "keywords": [
         "kafka"
     ],
     "require": {
-        "php": ">=7.1"
+        "php": ">=7.1",
+        "illuminate/support": "~5.5.0|~5.6.0"
     },
     "require-dev": {
         "phpunit/phpunit": "^7.3"
     },
     "autoload": {
         "psr-4" : {
-            "LaravelKafka\\" : "src/"
+            "Metamorphosis\\" : "src/"
         }
     },
     "authors": [
@@ -20,6 +21,5 @@
             "name": "Boitata Team",
             "email": "boitata@leroymerlin.com.br"
         }
-    ],
-    "require": {}
+    ]
 }
