--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,8 @@
     "require": {
         "php": ">=7.1",
         "ext-rdkafka": "*",
-        "illuminate/support": "~5.5.0|~5.6.0"
+        "illuminate/support": "~5.5.0|~5.6.0",
+        "illuminate/console": "~5.5.0|~5.6.0"
     },
     "require-dev": {
         "phpunit/phpunit": "^7.3",
