Create getters for config and add tests for it

--- a/composer.json
+++ b/composer.json
@@ -19,6 +19,11 @@
             "Metamorphosis\\" : "src/"
         }
     },
+    "autoload-dev": {
+        "files": [
+            "tests/test-helpers.php"
+        ]
+    },
     "authors": [
         {
             "name": "Boitata Team",
