--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,8 @@
         "php": ">=7.1",
         "ext-rdkafka": "*",
         "illuminate/support": "~5.5.0|~5.6.0",
-        "illuminate/console": "~5.5.0|~5.6.0"
+        "illuminate/console": "~5.5.0|~5.6.0",
+        "illuminate/config": "~5.5.0|~5.6.0"
     },
     "require-dev": {
         "phpunit/phpunit": "^7.3",
