--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,8 @@
     },
     "require-dev": {
         "phpunit/phpunit": "^7.3",
-        "kwn/php-rdkafka-stubs": "~1.1.0"
+        "kwn/php-rdkafka-stubs": "~1.1.0",
+        "orchestra/testbench": "~3.5.0|~3.6.0"
     },
     "autoload": {
         "psr-4" : {
