--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,7 @@
     "require-dev": {
         "phpunit/phpunit": "^7.3",
         "kwn/php-rdkafka-stubs": "~1.1.0",
-        "orchestra/testbench": "~3.5.0|~3.6.0"
+        "orchestra/testbench": "~3.5.0|~3.6.0",
         "satooshi/php-coveralls": "^1.0"
     },
     "autoload": {
