--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,8 @@
         "phpunit/phpunit": "^7.3",
         "kwn/php-rdkafka-stubs": "~1.1.0",
         "orchestra/testbench": "~3.5.0|~3.6.0",
-        "satooshi/php-coveralls": "^1.0"
+        "satooshi/php-coveralls": "^1.0",
+        "nealio82/avro-php": "^0.1.2"
     },
     "autoload": {
         "psr-4" : {
