--- a/composer.json
+++ b/composer.json
@@ -8,6 +8,7 @@
     "require": {
         "php": ">=7.1",
         "ext-rdkafka": "*",
+        "ext-json": "*",
         "illuminate/support": "~5.5.0|~5.6.0",
         "illuminate/console": "~5.5.0|~5.6.0",
         "illuminate/config": "~5.5.0|~5.6.0"
