--- a/composer.json
+++ b/composer.json
@@ -41,6 +41,9 @@
             "providers": [
                 "Metamorphosis\\MetamorphosisServiceProvider"
             ]
+        },
+        "aliases":{
+            "Metamorphosis": "Metamorphosis\\Facades\\Metamorphosis"
         }
     }
 }
