--- a/composer.json
+++ b/composer.json
@@ -19,7 +19,9 @@
         "kwn/php-rdkafka-stubs": "~1.1.0",
         "orchestra/testbench": "~3.5.0|~3.6.0",
         "satooshi/php-coveralls": "^1.0",
-        "nealio82/avro-php": "^0.1.2"
+        "nealio82/avro-php": "^0.1.2",
+        "phpstan/phpstan": "^0.10.5",
+        "phpstan/phpstan-phpunit": "^0.10.0"
     },
     "autoload": {
         "psr-4" : {
