--- a/composer.json
+++ b/composer.json
@@ -12,18 +12,15 @@
         "ext-json": "*",
         "illuminate/support": "~5.5.0||~5.6.0||~5.7.0",
         "illuminate/console": "~5.5.0||~5.6.0||~5.7.0",
-        "illuminate/config": "~5.5.0||~5.6.0||~5.7.0"
+        "illuminate/config": "~5.5.0||~5.6.0||~5.7.0",
+        "wikimedia/avro": "^1.7"
     },
     "require-dev": {
         "leroy-merlin-br/coding-standard": "^0.1.0",
         "phpunit/phpunit": "^7.3",
         "kwn/php-rdkafka-stubs": "~1.1.0",
         "orchestra/testbench": "~3.5.0||~3.6.0||~3.7.0",
-        "satooshi/php-coveralls": "^1.0",
-        "nealio82/avro-php": "^0.1.2"
-    },
-    "suggest": {
-        "nealio82/avro-php": "Required to use Avro features."
+        "satooshi/php-coveralls": "^1.0"
     },
     "autoload": {
         "psr-4" : {
