--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -22,5 +22,6 @@
     </filter>
     <logging>
         <log type="coverage-clover" target="build/logs/clover.xml"/>
+        <log type="coverage-html" target="build/coverage"/>
     </logging>
 </phpunit>
