--- a/.travis.yml
+++ b/.travis.yml
@@ -1,28 +1,19 @@
 language: php
 
-php:
-  - 7.2
-  - 7.3
+services:
+    - docker
 
-sudo: required
-
-before_install:
-  - git clone https://github.com/edenhill/librdkafka.git
-  - cd librdkafka/
-  - ./configure
-  - sudo make && sudo make install
-  - cd ../
-  - pecl install rdkafka
+cache:
+    directories:
+        - vendor
 
 before_script:
-  - composer install --no-interaction
+  - docker-compose build --build-arg UID=$(id -u) --build-arg GID=$(id -g)
+  - docker-compose run --rm php composer install --no-interaction
 
 script:
-  - vendor/bin/phpcs
-  - vendor/bin/phpunit
+  - docker-compose run --rm php vendor/bin/phpcs
+  - docker-compose run --rm php vendor/bin/phpunit
 
 after_script:
-  - php vendor/bin/coveralls -v
-
-notifications:
-  email: false
+  - docker-compose run --rm php php vendor/bin/coveralls -v
