--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -17,4 +17,13 @@ RUN pecl install rdkafka \
     xdebug \
   && rm -rf /tmp/*
 
+ARG UID=1000
+ARG GID=1000
+
+RUN groupmod -g ${GID} www-data \
+  && usermod -u ${UID} -g www-data www-data \
+  && chown -hR www-data:www-data \
+    /var/www \
+    /usr/local/
+
 USER www-data:www-data
