--- a/composer.json
+++ b/composer.json
@@ -18,6 +18,7 @@
     "require-dev": {
         "leroy-merlin-br/coding-standard": "^0.1.0",
         "phpunit/phpunit": "^7.3",
+        "mockery/mockery": "^1.3.0",
         "kwn/php-rdkafka-stubs": "~1.1.0",
         "orchestra/testbench": "~3.5.0||~3.6.0||~3.7.0",
         "satooshi/php-coveralls": "^1.0"
