--- a/composer.json
+++ b/composer.json
@@ -7,12 +7,13 @@
     ],
     "description": "Kafka package for laravel applications",
     "require": {
-        "php": ">=7.1",
         "ext-rdkafka": "*",
         "ext-json": "*",
+        "guzzlehttp/guzzle": "6.5.0",
         "illuminate/support": "~5.5.0||~5.6.0||~5.7.0",
         "illuminate/console": "~5.5.0||~5.6.0||~5.7.0",
         "illuminate/config": "~5.5.0||~5.6.0||~5.7.0",
+        "php": ">=7.1",
         "wikimedia/avro": "^1.7"
     },
     "require-dev": {
