--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,7 @@
     "require": {
         "ext-rdkafka": "*",
         "ext-json": "*",
-        "guzzlehttp/guzzle": "6.5.0",
+        "guzzlehttp/guzzle": "~6.5.0",
         "illuminate/support": "~5.5.0||~5.6.0||~5.7.0",
         "illuminate/console": "~5.5.0||~5.6.0||~5.7.0",
         "illuminate/config": "~5.5.0||~5.6.0||~5.7.0",
