add kafka on environment

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,3 +5,21 @@ services:
       build: docker
       volumes:
         - .:/var/www/html:rw
+
+    zookeeper:
+        image: 'bitnami/zookeeper:latest'
+        ports:
+            - '2181:2181'
+        environment:
+            - ALLOW_ANONYMOUS_LOGIN=yes
+
+        kafka:
+            image: 'bitnami/kafka:latest'
+            hostname: 'kafka'
+            ports:
+                - '9092:9092'
+            environment:
+                - KAFKA_LISTENERS=PLAINTEXT://:9092
+                - KAFKA_CFG_ADVERTISED_LISTENERS=PLAINTEXT://kafka:9092
+                - KAFKA_CFG_ZOOKEEPER_CONNECT=zookeeper:2181
+                - ALLOW_PLAINTEXT_LISTENER=yes
