--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,13 +13,15 @@ services:
         environment:
             - ALLOW_ANONYMOUS_LOGIN=yes
 
-        kafka:
-            image: 'bitnami/kafka:latest'
-            hostname: 'kafka'
-            ports:
-                - '9092:9092'
-            environment:
-                - KAFKA_LISTENERS=PLAINTEXT://:9092
-                - KAFKA_CFG_ADVERTISED_LISTENERS=PLAINTEXT://kafka:9092
-                - KAFKA_CFG_ZOOKEEPER_CONNECT=zookeeper:2181
-                - ALLOW_PLAINTEXT_LISTENER=yes
+    kafka:
+        image: 'bitnami/kafka:latest'
+        hostname: 'kafka'
+        ports:
+            - '9092:9092'
+        depends_on:
+          - zookeeper
+        environment:
+            - KAFKA_LISTENERS=PLAINTEXT://:9092
+            - KAFKA_CFG_ADVERTISED_LISTENERS=PLAINTEXT://kafka:9092
+            - KAFKA_CFG_ZOOKEEPER_CONNECT=zookeeper:2181
+            - ALLOW_PLAINTEXT_LISTENER=yes
