--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,6 +7,8 @@ services:
             - ./:/var/www/html
             - ./.docker/logs/nginx:/var/log/nginx
             - ./.docker/logs/laravel:/var/www/html/storage/logs
+        depends_on:
+            - kafka
 
     zookeeper:
         image: 'bitnami/zookeeper:latest'
