--- a/composer.json
+++ b/composer.json
@@ -10,18 +10,18 @@
         "ext-rdkafka": "*",
         "ext-json": "*",
         "guzzlehttp/guzzle": "~6.5.0",
-        "illuminate/support": "~5.5.0||~5.6.0||~5.7.0",
-        "illuminate/console": "~5.5.0||~5.6.0||~5.7.0",
-        "illuminate/config": "~5.5.0||~5.6.0||~5.7.0",
+        "illuminate/support": "^5.5 || ^6.0",
+        "illuminate/console": "^5.5 || ^6.0",
+        "illuminate/config": "^5.5 || ^6.0",
         "php": ">=7.1",
         "wikimedia/avro": "^1.7"
     },
     "require-dev": {
         "leroy-merlin-br/coding-standard": "^0.1.0",
-        "phpunit/phpunit": "^7.3",
+        "phpunit/phpunit": "^8.5",
         "mockery/mockery": "^1.3.0",
         "kwn/php-rdkafka-stubs": "~1.1.0",
-        "orchestra/testbench": "~3.5.0||~3.6.0||~3.7.0",
+        "orchestra/testbench": "^3.5 || ^4.0",
         "satooshi/php-coveralls": "^1.0"
     },
     "autoload": {
