--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -1,4 +1,4 @@
-FROM leroymerlinbr/php:7.2
+FROM leroymerlinbr/php:7.3
 LABEL maintainer="boitata@leroymerlin.com.br"
 
 USER root:root
@@ -25,5 +25,7 @@ RUN groupmod -g ${GID} www-data \
   && chown -hR www-data:www-data \
     /var/www \
     /usr/local/
+
+COPY custom.ini /usr/local/etc/php/conf.d/custom.ini
 
 USER www-data:www-data
