--- a/composer.json
+++ b/composer.json
@@ -10,10 +10,10 @@
         "ext-rdkafka": "*",
         "ext-json": "*",
         "guzzlehttp/guzzle": "~6.5.0",
-        "illuminate/support": "^5.5 || ^6.0 || ^7.0",
-        "illuminate/console": "^5.5 || ^6.0 || ^7.0",
-        "illuminate/config": "^5.5 || ^6.0 || ^7.0",
-        "php": ">=7.2",
+        "illuminate/support": "^5.5 || ^6.0 || ^7.0 || ^8.0",
+        "illuminate/console": "^5.5 || ^6.0 || ^7.0 || ^8.0",
+        "illuminate/config": "^5.5 || ^6.0 || ^7.0 || ^8.0",
+        "php": ">=7.1",
         "wikimedia/avro": "^1.7"
     },
     "require-dev": {
@@ -21,7 +21,7 @@
         "phpunit/phpunit": "^9.4.3",
         "mockery/mockery": "^1.3.0",
         "kwn/php-rdkafka-stubs": "~1.1.0",
-        "orchestra/testbench": "^3.5 || ^4.0 || ^5.0",
+        "orchestra/testbench": "^6.0",
         "php-coveralls/php-coveralls": "^2.4",
         "dms/phpunit-arraysubset-asserts": "^0.2.1"
     },
