--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -1,7 +1,7 @@
 on: [push]
 name: Tests
 jobs:
-    setup:
+    setup-and-tests:
         runs-on: ubuntu-latest
         steps:
             -   uses: actions/checkout@v2
@@ -12,23 +12,11 @@ jobs:
             -   name: Composer install
                 run: docker-compose run --rm php composer install --no-interaction
 
-    tests:
-        runs-on: ubuntu-latest
-        needs: setup
-        steps:
-            -   uses: actions/checkout@v2
-
-            -   name: Code Standards
+            -   name: Run Code Standards
                 run: docker-compose run --rm -T php vendor/bin/phpcs
 
-            -   name: Tests
+            -   name: Run Tests
                 run: docker-compose run --rm -T php vendor/bin/phpcs
 
-    coverage-report:
-        runs-on: ubuntu-latest
-        needs: [ setup, tests ]
-        steps:
-            -   uses: actions/checkout@v2
-
-            -   name: Coverage Report
+            -   name: Report Coverage
                 run: docker-compose run --rm php php vendor/bin/coveralls -v
