--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -19,4 +19,4 @@ jobs:
                 run: docker-compose run --rm -T php vendor/bin/phpcs
 
             -   name: Report Coverage
-                run: docker-compose run --rm php php vendor/bin/coveralls -v
+                run: docker-compose run --rm php php vendor/bin/php-coveralls -v
