--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -10,7 +10,7 @@ jobs:
                 run: docker-compose build --build-arg UID=$(id -u) --build-arg GID=$(id -g)
 
             -   name: Composer install
-                run: docker-compose run --rm php composer install --no-interaction
+                run: docker-compose run --rm -T php composer install --no-interaction --no-progress
 
             -   name: Run Code Standards
                 run: docker-compose run --rm -T php vendor/bin/phpcs
@@ -19,5 +19,5 @@ jobs:
                 run: docker-compose run --rm -T php vendor/bin/phpunit
 
             -   name: Report Coverage
-                run: docker-compose run --rm php -e COVERALLS_REPO_TOKEN -e GITHUB_REF -e GITHUB_ACTIONS \
+                run: docker-compose run --rm -T php -e COVERALLS_REPO_TOKEN -e GITHUB_REF -e GITHUB_ACTIONS \
                     -e GITHUB_RUN_ID -e GITHUB_EVENT_NAME php vendor/bin/php-coveralls -v
