--- a/composer.json
+++ b/composer.json
@@ -22,7 +22,11 @@
         "mockery/mockery": "^1.3.0",
         "kwn/php-rdkafka-stubs": "~1.1.0",
         "orchestra/testbench": "^6.0",
-        "dms/phpunit-arraysubset-asserts": "^0.2.1"
+        "dms/phpunit-arraysubset-asserts": "^0.2.1",
+        "vimeo/psalm": "^4.11",
+        "psalm/plugin-phpunit": "^0.16.1",
+        "psalm/plugin-mockery": "^0.9.0",
+        "phpro/grumphp": "^1.5"
     },
     "autoload": {
         "psr-4": {
