feat: add 7.3 php and psalm

--- a/grumphp.yml
+++ b/grumphp.yml
@@ -1,2 +1,36 @@
 grumphp:
-    tasks: { yamllint: null }
+  git_hook_variables:
+    EXEC_GRUMPHP_COMMAND: 'docker-compose run --rm -e COLUMNS=$COLUMNS -e LINES=$LINES -e TERM=$TERM -T deploy'
+  stop_on_failure: true
+  process_timeout: 120
+  ascii:
+    failed: ~
+    succeeded: ~
+  tasks:
+    phpcs:
+      standard: [ phpcs.xml ]
+    psalm:
+      config: psalm.xml
+      ignore_patterns: ['bootstrap', 'build', 'database', 'resources' ,'routes', 'tests']
+      threads: 4
+    git_commit_message:
+      enforce_capitalized_subject: false
+      max_body_width: 0
+      max_subject_width: 80
+      type_scope_conventions:
+        - types:
+          - build
+          - ci
+          - chore
+          - docs
+          - feat
+          - fix
+          - perf
+          - refactor
+          - revert
+          - style
+          - test
+        - scopes: [ ]
+  fixer:
+    enabled: true
+    fix_by_default: true
