chore: add setup-dev script on composer
Adding a composer script to install project dependencies and configure grumphp

--- a/composer.json
+++ b/composer.json
@@ -52,5 +52,11 @@
         "aliases": {
             "Metamorphosis": "Metamorphosis\\Facades\\Metamorphosis"
         }
+    },
+    "scripts": {
+        "setup-dev": [
+            "@composer install",
+            "vendor/bin/grumphp git:init"
+        ]
     }
 }
