--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -22,3 +22,8 @@ services:
             - KAFKA_CFG_ADVERTISED_LISTENERS=PLAINTEXT://kafka:9092
             - KAFKA_CFG_ZOOKEEPER_CONNECT=zookeeper:2181
             - ALLOW_PLAINTEXT_LISTENER=yes
+
+    documentor:
+        image: phpdoc/phpdoc
+        volumes:
+            - .:/data
