--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,7 @@
         "wikimedia/avro": "^1.7"
     },
     "require-dev": {
-        "leroy-merlin-br/coding-standard": "^3.1.0",
+        "leroy-merlin-br/coding-standard": "^v3.1.0",
         "phpunit/phpunit": "^9.5.24",
         "mockery/mockery": "^1.5.1",
         "kwn/php-rdkafka-stubs": "^2.2.1",
@@ -25,7 +25,8 @@
         "dms/phpunit-arraysubset-asserts": "^0.2.1",
         "phpro/grumphp": "^1.13.0",
         "vimeo/psalm": "^4.27.0",
-        "psalm/plugin-mockery": "^0.9.1"
+        "psalm/plugin-mockery": "^0.9.1",
+        "rector/rector": "^0.13.7"
     },
     "autoload": {
         "psr-4": {
@@ -58,5 +59,11 @@
             "@composer install",
             "vendor/bin/grumphp git:init"
         ]
+    },
+    "config": {
+        "allow-plugins": {
+            "dealerdirect/phpcodesniffer-composer-installer": true,
+            "phpro/grumphp": true
+        }
     }
 }
