--- a/composer.json
+++ b/composer.json
@@ -20,7 +20,7 @@
         "leroy-merlin-br/coding-standard": "^1.0.1",
         "phpunit/phpunit": "^9.4.3",
         "mockery/mockery": "^1.3.0",
-        "kwn/php-rdkafka-stubs": "~1.1.0",
+        "kwn/php-rdkafka-stubs": "^2.2.0",
         "orchestra/testbench": "^6.0",
         "dms/phpunit-arraysubset-asserts": "^0.2.1",
         "phpro/grumphp": "^1.5",
