--- a/composer.json
+++ b/composer.json
@@ -7,7 +7,7 @@
     ],
     "description": "Kafka package for laravel applications",
     "require": {
-        "ext-rdkafka": "*",
+        "ext-rdkafka": ">=4.0",
         "ext-json": "*",
         "guzzlehttp/guzzle": "^6.5.0 || ^7.0",
         "illuminate/support": "^5.5 || ^6.0 || ^7.0 || ^8.0",
