--- a/composer.json
+++ b/composer.json
@@ -7,20 +7,20 @@
     ],
     "description": "Kafka package for laravel applications",
     "require": {
-        "ext-rdkafka": ">=4.0",
+        "ext-rdkafka": "*",
         "ext-json": "*",
         "guzzlehttp/guzzle": "^6.5.0 || ^7.0",
         "illuminate/support": "^5.5 || ^6.0 || ^7.0 || ^8.0",
         "illuminate/console": "^5.5 || ^6.0 || ^7.0 || ^8.0",
         "illuminate/config": "^5.5 || ^6.0 || ^7.0 || ^8.0",
-        "php": ">=7.4",
+        "php": ">=7.1",
         "wikimedia/avro": "^1.7"
     },
     "require-dev": {
         "leroy-merlin-br/coding-standard": "^1.0.1",
         "phpunit/phpunit": "^9.4.3",
         "mockery/mockery": "^1.3.0",
-        "kwn/php-rdkafka-stubs": "^2.2.0",
+        "kwn/php-rdkafka-stubs": "~1.1.0",
         "orchestra/testbench": "^6.0",
         "dms/phpunit-arraysubset-asserts": "^0.2.1",
         "phpro/grumphp": "^1.5",
