--- a/composer.json
+++ b/composer.json
@@ -7,7 +7,7 @@
     ],
     "description": "Kafka package for laravel applications",
     "require": {
-        "ext-rdkafka": "*",
+        "ext-rdkafka": "<4.0",
         "ext-json": "*",
         "guzzlehttp/guzzle": "^6.5.0 || ^7.0",
         "illuminate/support": "^5.5 || ^6.0 || ^7.0 || ^8.0",
@@ -18,13 +18,13 @@
     },
     "require-dev": {
         "leroy-merlin-br/coding-standard": "^1.0.1",
-        "phpunit/phpunit": "^9.4.3",
-        "mockery/mockery": "^1.3.0",
-        "kwn/php-rdkafka-stubs": "~1.1.0",
-        "orchestra/testbench": "^6.0",
+        "phpunit/phpunit": "^9.5.25",
+        "mockery/mockery": "^1.5.1",
+        "kwn/php-rdkafka-stubs": "~1.1.1",
+        "orchestra/testbench": "^6.25.0",
         "dms/phpunit-arraysubset-asserts": "^0.2.1",
-        "phpro/grumphp": "^1.5",
-        "vimeo/psalm": "^4.18",
+        "phpro/grumphp": "^1.5.1",
+        "vimeo/psalm": "^4.27.0",
         "psalm/plugin-mockery": "^0.9.1"
     },
     "autoload": {
