--- a/composer.json
+++ b/composer.json
@@ -10,10 +10,10 @@
         "ext-rdkafka": ">=4.0",
         "ext-json": "*",
         "guzzlehttp/guzzle": "^6.5.0 || ^7.0",
-        "illuminate/support": "^5.5 || ^6.0 || ^7.0 || ^8.0",
-        "illuminate/console": "^5.5 || ^6.0 || ^7.0 || ^8.0",
-        "illuminate/config": "^5.5 || ^6.0 || ^7.0 || ^8.0",
-        "php": ">=7.4",
+        "illuminate/support": "^9.0 || ^10.0",
+        "illuminate/console": "^9.0 || ^10.0",
+        "illuminate/config": "^9.0 || ^10.0",
+        "php": "^8.0",
         "wikimedia/avro": "^1.9.0"
     },
     "require-dev": {
@@ -21,7 +21,7 @@
         "phpunit/phpunit": "^9.5.27",
         "mockery/mockery": "^1.5.1",
         "kwn/php-rdkafka-stubs": "^2.2.1",
-        "orchestra/testbench": "^6.25.1",
+        "orchestra/testbench": "^7.0|^8.0",
         "dms/phpunit-arraysubset-asserts": "^0.2.1",
         "phpro/grumphp": "^1.13.0",
         "vimeo/psalm": "^4.30.0",
