--- a/.github/workflows/continuous-integration.yml
+++ b/.github/workflows/continuous-integration.yml
@@ -17,6 +17,8 @@ jobs:
           - '7.4'
           - '8.0'
           - '8.1'
+    env:
+      KAFKA_BROKER_CONNECTIONS: 'localhost:9092'
     services:
       zookeeper:
         image: bitnami/zookeeper
